# nammadashcam

./: .gitignore  README.md  development.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: api-payload.md  architecture.md  event-contract.md  tuning-notes.md
docs/plans/: 2026-07-19_movement-service-integration.md
firmware/: README.md
firmware/unoq_dashcam_mcu/: unoq_dashcam_mcu.ino
linux/: .gitignore  pyproject.toml
linux/src/namma_dashcam/: __init__.py  alignment.py  bridge.py  camera.py  config.py  frame_buffer.py  logging.py  main.py  storage.py  time_sync.py  upload_queue.py  uploader.py  verifier.py
linux/systemd/: namma-dashcam.service
linux/tests/: test_alignment.py  test_bridge.py  test_storage.py  test_upload_queue.py  test_verifier.py
mcu/: namma_dashcam.ino
mcu/src/: calibration.h  debug_log.h  event_packet.h  filters.h  gps.cpp  gps.h  motion_buffer.h  pothole_detector.cpp  pothole_detector.h  pothole_features.h  speed_estimator.cpp  speed_estimator.h  time_sync.h
src/pothole_dashcam/: __init__.py  main.py  movement_main.py
systemd/: namma-dashcam-movement.service
testdata/road-tests/: blurred_camera_event.json  harsh_braking_false_positive.json  low_light_event.json  pothole_true_positive.json  rough_road_vibration.json  (+1 more)
tests/: test_bridge_event_sink_service.py  test_camera_buffer_service.py  test_capture_loop_service.py  test_inference_service.py  test_mcu_motion_service.py  test_movement_parser_service.py  test_movement_service.py  test_smoke.py  test_usb_camera_service.py
(+15 files in other folders)
